<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Infocomer</string>
    <string name="action_settings">Settings</string>
    <string name="times_open_label">Horarios:</string>
    <string name="initial_text">Init</string>
    <string name="titlebar_text">Infocomer</string>
    <string name="imgViewMainDescription">Main picture</string>
    <string name="imgIconDescription">Comments icon</string>
    <string name="txtViewCommentsLabel">Comentarios</string>
    <string name="edit_text_new_comment_label">Comenta...</string>
    <string name="new_comment_button_label">OK</string>
    
    <string name="fragment_title_list">Listado</string>
    <string name="fragment_title_map">Mapa</string>
    <string name="fragment_title_viewpager">Imágenes</string>
  
    
    <string name="call_button_label">Llamar</string>
    <string name="picture_button_label">Foto</string>
    
    <string name="action_star">Favorito</string>
    <string name="action_share">Compartir</string>
    
    <string name="message_about">Fragment vacío</string>
    <string-array name="drawer_options">
        <item>Tiendas</item>
        <item>Fotografías</item>
        <item>Comunidad</item>
    </string-array>
    
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    
    <string name="store_name_1">La piola</string>
    <string name="store_address_1">Calle Fúcar 18 Madrid</string>
    <string name="store_telephone_1">917382928</string>
    <string name="store_time_open_1">Lunes - Viernes: 10:00 a 20:00</string>
    <string name="store_email_1">contacto@lapiola.es</string>
    <string name="store_website_1">http://barlapiola.blogspot.com.es/</string>
    <string name="store_picture_name_1">la_piola</string>
    <string name="store_comments_1">Cafetería muy tranquila</string>
    
    <string name="store_name_2">La musa de Espronceda</string>
    <string name="store_address_2">Calle Santa Isabel 15 Madrid</string>
    <string name="store_telephone_2">917235928</string>
    <string name="store_time_open_2">Lunes - Viernes: 9:00 a 19:00</string>
    <string name="store_email_2">contacto@lamusa.es</string>
    <string name="store_website_2">https://plus.google.com/114318312863552639524/about</string>
    <string name="store_picture_name_2">la_musa_de_espronceda</string>
    <string name="store_comments_2">Pinchos ricos</string>
    
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_photography_detail">PhotographyDetailActivity</string>
    

</resources>
