<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgViewComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgIconDescription"
            android:src="@drawable/comments_icon" />

        <TextView
            android:id="@+id/txtViewComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewCommentsLabel" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextNewComment"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="textMultiLine"
            android:text="@string/edit_text_new_comment_label" >
        </EditText>

        <Button
            android:id="@+id/btnNewComment"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/new_comment_button_label" />
    </LinearLayout>

</LinearLayout>