<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgViewMainDescription"
        android:tag="tag"
        android:src="@drawable/la_musa_de_espronceda" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgViewComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imgIconDescription"
            android:src="@drawable/comments_icon" />

        <TextView
            android:id="@+id/txtViewComments"
            android:paddingLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</LinearLayout>