<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/txtViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtViewTelephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtViewWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtViewTimesOpenLabel"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/times_open_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtViewTImesOpenData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/initial_text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="50dp" >

        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/call_button_label" />
        
        <Button
            android:id="@+id/btnPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picture_button_label" />

    </LinearLayout>

</LinearLayout>